--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CourseCore - courses platform</title>
+    <title>Tech-Treks</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/adaptive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -19,7 +19,7 @@
             <div class="logo">
                 <img src="img/logo.png" alt="logo">
                 <a href="index.html">
-                    <h1>CourseCore</h1>
+                    <h1>Tech Trek</h1>
                 </a>
             </div>
             <ul id="dropdown" class="nav-panel">
@@ -60,9 +60,9 @@
 
     <div class="main-container">
         <div class="main-text">
-            <p class="main-p">Let's learn together with</p>
-            <h1>CourseCore</h1>
-            <p class="main-p2"><a href="register.html"><span>Log in</span> to start</a></p>
+            <p class="main-p">Get ready to be on Track Through</p>
+            <h1>Tech Treks</h1>
+            <!-- <p class="main-p2"><a href="register.html"><span>Log in</span> to start</a></p> -->
         </div>
         <div class="main-img">
             <img src="img/main.jpg" alt="">
@@ -124,7 +124,8 @@
                         <p>Learn fundamentals like creating a marketing
                             strategy, leveraging digital and
                             <span class="card-span">
-                                social media channels to reach your business goals.</span></p>
+                                social media channels to reach your business goals.</span>
+                        </p>
 
                         <div class="card-action">
                             <a href="#" class="button">Read more</a>
