Changed layouts and css

--- a/about-us.html
+++ b/about-us.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style/courses.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="icon" href="img/icon.png">
-    <title>About us - CourseCore</title>
+    <title>About us - Tech Treks</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
             <div class="logo">
                 <img src="img/logo.png" alt="logo">
                 <a href="index.html">
-                    <h1>CourseCore</h1>
+                    <h1>TechTreks</h1>
                 </a>
             </div>
             <ul id="dropdown" class="nav-panel">
@@ -111,9 +111,9 @@
         <div class="footer-2" id="contact-us">
             <h2>Contact Us</h2>
             <ul>
-                <a href="#"><i class="fa-solid fa-phone"></i> Tel +1 (98) 102-546-15-12</a>
-                <a href="#"><i class="fa-solid fa-envelope"></i> coursecore.support@gmail.com</a>
-                <a href="#"><i class="fa-brands fa-twitter"></i> @coursecore</a>
+                <a href="#"><i class="fa-solid fa-phone"></i></a>
+                <a href="#"><i class="fa-solid fa-envelope"></i> Tech-Treks@gmail.com</a>
+                <a href="#"><i class="fa-brands fa-twitter"></i> @TechTreks/a>
             </ul>
         </div>
         <div class="footer-3">
