--- a/index.html
+++ b/index.html
@@ -28,20 +28,21 @@
                     <a href="register.html">Log in</a>
                 </li>
                 <li>
+                    <a href="about-us.html">About</a>
+                </li>
+                <li>
                     <a href="courses.html">Courses</a>
                 </li>
                 <li>
-                    <a href="articles.html">Articles</a>
-                </li>
-                <li>
-                    <a href="about-us.html">About us</a>
-                </li>
-                <li>
-                    <a href="privacypolicy.html">Privacy Policy</a>
+                    <a href="articles.html">Services</a>
                 </li>
                 <li>
                     <a href="#contact-us">Contact Us</a>
                 </li>
+                <!-- <li>
+                    <a href="privacypolicy.html">Privacy Policy</a>
+                </li> -->
+
             </ul>
             <ul>
                 <li class="buttons">
@@ -70,7 +71,7 @@
     </div>
 
     <div class="courses">
-        <h1>Check the most popular courses right now!</h1>
+        <!-- <h1>Check the most popular courses right now!</h1> -->
         <div class="cards">
             <div class="card">
                 <img src="img/uiux.jpg" alt="">
