--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                     <a href="register.html">Log in</a>
                 </li>
                 <li>
-                    <a href="about-us.html">About</a>
+                    <a href="about-us.html">ABOUT</a>
                 </li>
                 <li>
-                    <a href="courses.html">Courses</a>
+                    <a href="courses.html">COURSES</a>
                 </li>
                 <li>
-                    <a href="articles.html">Services</a>
+                    <a href="articles.html">SERVICES</a>
                 </li>
                 <li>
                     <a href="#contact-us">FAQs</a>
