many changes in diff section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="logo">
                 <img src="img/logo.png" alt="logo">
                 <a href="index.html">
-                    <h1>Tech Trek</h1>
+                    <h1>Tech Treks</h1>
                 </a>
             </div>
             <ul id="dropdown" class="nav-panel">
@@ -31,13 +31,13 @@
                     <a href="about-us.html">ABOUT</a>
                 </li>
                 <li>
-                    <a href="courses.html">COURSES</a>
+                    <a href="courses.html">LEARN</a>
                 </li>
                 <li>
                     <a href="articles.html">SERVICES</a>
                 </li>
                 <li>
-                    <a href="#contact-us">FAQs</a>
+                    <a href="#contact-us">PROJECTS</a>
                 </li>
                 <!-- <li>
                     <a href="privacypolicy.html">Privacy Policy</a>
@@ -74,13 +74,12 @@
         <!-- <h1>Check the most popular courses right now!</h1> -->
         <div class="cards">
             <div class="card">
-                <img src="img/uiux.jpg" alt="">
+                <img src="img/career.jpg" alt="">
                 <div class="card-content">
                     <div class="card-text">
-                        <h2>UI / UX</h2>
-                        <p>Check our User Interface and User Experience course!Learn who is UI/UX designer... <span
-                                class="card-span">Become UI/UX specialist </span></p>
-
+                        <h2>Career Scope</h2>
+                        <p>Non-tech roles are the backbone of every industry's success story,They're the architects of
+                            innovation, the strategists behind growth.....</p>
                         <div class="card-action">
                             <a href="course.html" class="button">Read more</a>
                         </div>
@@ -91,10 +90,10 @@
                 <img src="img/java.jpg" alt="">
                 <div class="card-content">
                     <div class="card-text">
-                        <h2>Java</h2>
-                        <p>Learning Java opens up your possibilities when coding. <span class="card-span"> Learn
-                                important Java
-                                coding fundamentals and practice your new skills with real-world projects.</span></p>
+                        <h2>Projects</h2>
+                        <p>Projects offer a diverse range of opportunities to make a meaningful impact across
+                            industries...
+                        </p>
                         <div class="card-action">
                             <a href="#" class="button">Read more</a>
                         </div>
@@ -106,11 +105,9 @@
                 <img src="img/algorithms.jpg" alt="">
                 <div class="card-content">
                     <div class="card-text">
-                        <h2>Algorithms and Data Structures</h2>
-                        <p>Whether you're just starting out or not <span class="card-span"> we
-                                offer various Data
-                                Structures & Algorithms courses designed to fit your needs.</span></p>
-
+                        <h2>Virtual Lab Modules</h2>
+                        <p>Virtual lab modules that guide users through the simulation process step-by-step
+                            and exercises to reinforce learning objectives...</p>
                         <div class="card-action">
                             <a href="#" class="button">Read more</a>
                         </div>
