--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@
         <div class="main-text">
             <p class="main-p">Get ready to be on Track Through</p>
             <h1>Tech Treks</h1>
+            <script>
+                window.embeddedChatbotConfig = {
+                chatbotId: "LrK1OeXHmz4C0BgZYdHim",
+                domain: "www.chatbase.co"
+                }
+                </script>
+                <script
+                src="https://www.chatbase.co/embed.min.js"
+                chatbotId="LrK1OeXHmz4C0BgZYdHim"
+                domain="www.chatbase.co"
+                defer>
+                </script>
             <!-- <p class="main-p2"><a href="register.html"><span>Log in</span> to start</a></p> -->
         </div>
         <div class="main-img">
