changed in fonts and css

--- a/course.html
+++ b/course.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="icon" href="img/icon.png">
 
-    <title>UI / UX - Apply course, CourseCore</title>
+    <title>Mechanical</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
             <div class="logo">
                 <img src="img/logo.png" alt="logo">
                 <a href="index.html">
-                    <h1>CourseCore</h1>
+                    <h1>Tech Treks</h1>
                 </a>
             </div>
             <ul id="dropdown" class="nav-panel">
@@ -31,19 +31,16 @@
                     <a href="register.html">Log in</a>
                 </li>
                 <li>
-                    <a href="courses.html">Courses</a>
+                    <a href="courses.html">ABOUT</a>
                 </li>
                 <li>
-                    <a href="articles.html">Articles</a>
+                    <a href="articles.html">LEARN</a>
                 </li>
                 <li>
-                    <a href="about-us.html">About us</a>
+                    <a href="about-us.html">SERVICES</a>
                 </li>
                 <li>
-                    <a href="privacypolicy.html">Privacy Policy</a>
-                </li>
-                <li>
-                    <a href="#contact-us">Contact Us</a>
+                    <a href="privacypolicy.html">PROJECTS</a>
                 </li>
             </ul>
             <ul>
@@ -61,7 +58,7 @@
     </header>
     <div class="back-to-courses">
         <a href="courses.html">
-            <i class="fa-solid fa-arrow-left-long"></i>Back to Courses
+            <i class="fa-solid fa-arrow-left-long"></i>Back to Home
 
         </a>
     </div>
@@ -69,12 +66,8 @@
 
         <img src="img/uiux.jpg" alt="ui/ux">
         <div class="course-main-text">
-            <h1>UI / UX</h1>
-            <p>User Interface (UI) and User Experience (UX) Design play key roles in the experience users have when
-                interacting with digital products and applications. In this course, we’ll cover the theory and
-                methodologies behind UI and UX design. You’ll also design your own wireframes and interactive
-                prototypes. Learning UI and UX basics can help you collaborate better on team projects and create new
-                career opportunities.</p>
+            <h1>CAD -Computer Aided Design</h1>
+            <p></p>
             <a href="register.html">Apply</a>
         </div>
         <div class="dropdown-box">
