--- a/courses.html
+++ b/courses.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="icon" href="img/icon.png">
 
-    <title>Courses - CourseCore</title>
+    <title></title>
 </head>
 
 <body>
