--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="logo">
                 <img src="img/logo.png" alt="logo">
                 <a href="index.html">
-                    <h1>Tech Treks</h1>
+                    <h1 class="tech">Tech Treks</h1>
                 </a>
             </div>
             <ul id="dropdown" class="nav-panel">
@@ -65,15 +65,12 @@
             <h1>Tech Treks</h1>
             <script>
                 window.embeddedChatbotConfig = {
-                chatbotId: "LrK1OeXHmz4C0BgZYdHim",
-                domain: "www.chatbase.co"
+                    chatbotId: "LrK1OeXHmz4C0BgZYdHim",
+                    domain: "www.chatbase.co"
                 }
-                </script>
-                <script
-                src="https://www.chatbase.co/embed.min.js"
-                chatbotId="LrK1OeXHmz4C0BgZYdHim"
-                domain="www.chatbase.co"
-                defer>
+            </script>
+            <script src="https://www.chatbase.co/embed.min.js" chatbotId="LrK1OeXHmz4C0BgZYdHim"
+                domain="www.chatbase.co" defer>
                 </script>
             <!-- <p class="main-p2"><a href="register.html"><span>Log in</span> to start</a></p> -->
         </div>
