changed files and maked a learn page

--- a/career.html
+++ b/career.html
@@ -31,16 +31,16 @@
                     <a href="register.html">Log in</a>
                 </li>
                 <li>
-                    <a href="courses.html">ABOUT</a>
+                    <a href="about-us.html">ABOUT</a>
                 </li>
                 <li>
-                    <a href="articles.html">LEARN</a>
+                    <a href="courses.html">LEARN</a>
                 </li>
                 <li>
-                    <a href="about-us.html">SERVICES</a>
+                    <a href="articles.html">SERVICES</a>
                 </li>
                 <li>
-                    <a href="privacypolicy.html">PROJECTS</a>
+                    <a href="#contact-us">PROJECTS</a>
                 </li>
             </ul>
             <ul>
@@ -57,7 +57,7 @@
         </nav>
     </header>
     <div class="back-to-courses">
-        <a href="courses.html">
+        <a href="career.html">
             <i class="fa-solid fa-arrow-left-long"></i>Back to Home
 
         </a>
@@ -66,7 +66,7 @@
 
         <img src="img/uiux.jpg" alt="ui/ux">
         <div class="course-main-text">
-            <h1>CAD -Computer Aided Design</h1>
+            <h1>Mech</h1>
             <p></p>
             <a href="register.html">Apply</a>
         </div>
