--- a/courses.html
+++ b/courses.html
@@ -20,7 +20,7 @@
             <div class="logo">
                 <img src="img/logo.png" alt="logo">
                 <a href="index.html">
-                    <h1>CourseCore</h1>
+                    <h1>Tech Treks</h1>
                 </a>
             </div>
             <ul id="dropdown" class="nav-panel">
@@ -29,19 +29,16 @@
                     <a href="register.html">Log in</a>
                 </li>
                 <li>
-                    <a href="courses.html">Courses</a>
+                    <a href="about-us.html">ABOUT</a>
                 </li>
                 <li>
-                    <a href="articles.html">Articles</a>
+                    <a href="courses.html">LEARN</a>
                 </li>
                 <li>
-                    <a href="about-us.html">About us</a>
+                    <a href="about-us.html">SERVICES</a>
                 </li>
                 <li>
-                    <a href="privacypolicy.html">Privacy Policy</a>
-                </li>
-                <li>
-                    <a href="#contact-us">Contact Us</a>
+                    <a href="privacypolicy.html">PROJECTS</a>
                 </li>
             </ul>
             <ul>
@@ -56,20 +53,20 @@
             </ul>
 
         </nav>
-        <div class="categories-background">
+        <!-- <div class="categories-background">
             <div class="categories-wrapper">
                 <div class="categories-container hover-dropdown" id="categories">
-                    <h3>Course categories</h3>
+                    <h3>Domains</h3>
 
                     <div class="categories">
                         <a href="#design">Design</a>
-                        <a href="#economics">Economics</a>
-                        <a href="#mathematics">Mathematics</a>
-                        <a href="#programming">Programming</a>
+                        <a href="#civil">Civil</a>
+                        <a href="#Mechanical">Mechanical</a>
+                        <a href="#Architecture">Architecture</a>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </header>
 
     <div class="main-courses">
@@ -77,64 +74,79 @@
         <div class="course-cards">
 
             <div class="card" id="economics">
-                <img src="img/uiux.jpg" alt="">
+                <img src="img/mech.jpg" alt="">
                 <div class="card-content">
                     <div class="card-text">
-                        <h2>UI / UX</h2>
-                        <p>User Interface (UI) and User Experience (UX) Design play key roles in the experience users
-                            have when interacting with digital products and applications. In this course, we’ll cover
-                            the theory and methodologies behind UI and UX design. You’ll also design your own wireframes
-                            and interactive prototypes. Learning UI and UX basics can help you collaborate better on
-                            team projects and create new career opportunities.</p>
+                        <!-- <h2>CAD - Computer Aided Design</h2>
+                        <p>CAD is a technology that utilizes computer systems to aid in the creation, modification,
+                            analysis, or optimization of a
+                            design. It is extensively used in various industries such as engineering, architecture,
+                            automotive, aerospace, and
+                            manufacturing to produce accurate and detailed models of products or structures.</p> -->
+                        <h2>Mechanical</h2>
+                        <p>Mechanical engineering is a diverse field that focuses on the design,
+                            development,manufacturing, and maintenance of
+                            mechanical systems and devices. engineers work in various industries, including automotive,
+                            aerospace, energy,
+                            manufacturing, and robotics, where they design everything from engines and turbines to HVAC
+                            systems and consumer
+                            products</p>
                         <div class="card-action">
-                            <a href="course.html" class="button">Read more</a>
+                            <a href="courses.html" class="button">Explore</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="card" id="mathematics">
-                <img src="img/marketing.jpg" alt="">
+                <img src="img/archie.jpg" alt="">
                 <div class="card-content">
                     <div class="card-text">
-                        <h2>Marketing</h2>
-                        <p>You'll learn how to create ads using Meta Ads Manager, utilize Meta experiments, optimize ads
-                            through A/B testing, integrate data from campaigns and perform an analysis to evaluate the
-                            results. </p>
+                        <h2>Architecture</h2>
+                        <p>Architecture is both an art and a science, focusing on the design, planning, and
+                            construction of buildings and
+                            structures that are aesthetically pleasing, functional, and sustainable. Architects are
+                            responsible for creating spaces
+                            that meet the needs of their users while considering factors such as safety,
+                            accessibility, and environmental impact.</p>
 
                         <div class="card-action">
-                            <a href="#" class="button">Read more</a>
+                            <a href="#" class="button">Explore</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="card" id="programming">
-                <img src="img/algorithms.jpg" alt="">
+                <img src="img/civil.jpg" alt="">
                 <div class="card-content">
                     <div class="card-text">
-                        <h2>Algorithms and Data Structures</h2>
-                        <p>An overview of data structure concepts, arrays, stack, queues, trees, and graphs. Discussion
-                            of various implementations of these data objects, programming styles, and run-time
-                            representations. Course also examines algorithms for sorting, searching and some graph
-                            algorithms. Algorithm analysis and efficient code design is discussed.</p>
+                        <h2>Civil</h2>
+                        <p>Civil engineers are responsible for designing and overseeing the construction of roads,
+                            bridges, dams, buildings,
+                            airports, water supply systems, and other structures that form the foundation of our
+                            communities engineers utilize principles of mathematics, physics, and materials science to
+                            plan, design, and execute
+                            projects that meet safety, environmental, and economic requirements</p>
 
                         <div class="card-action">
-                            <a href="#" class="button">Read more</a>
+                            <a href="#" class="button">Explore</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="card">
-                <img src="img/java.jpg" alt="">
+                <img src="img/aero.jpg" alt="">
                 <div class="card-content">
                     <div class="card-text">
-                        <h2>Java</h2>
-                        <p>Popular for its versatility and ability to create a wide variety of applications, learning
-                            Java opens up your possibilities when coding. With it, you’ll be able to develop large
-                            systems, software, and mobile applications — and even create mobile apps for Android. Learn
-                            important Java coding fundamentals and practice your new skills with real-world projects.
-                        </p>
+                        <h2>Aerospace</h2>
+                        <p>It is a specialized field of engineering that focuses on the design, development, testing,
+                            and production of aircraft,
+                            spacecraft, satellites, and other aerospace vehicles and systems. Aerospace engineers apply
+                            principles of aerodynamics,
+                            propulsion, materials science, and structural analysis to create vehicles that can operate
+                            within Earth's atmosphere
+                            or in the vacuum of space.</p>
                         <div class="card-action">
-                            <a href="#" class="button">Read more</a>
+                            <a href="#" class="button">Explore</a>
                         </div>
                     </div>
 
@@ -143,36 +155,54 @@
         </div>
     </div>
 
-    <footer class="courses-footer">
+    <footer>
 
-        <div class="footer-1">
+        <!-- <div class="footer-1">
             <div class="footer-logo-cont">
                 <img src="img/logo.png" alt="logo">
-                <h1>CourseCore</h1>
-            </div>
+                <h1>CourseCore</h1> -->
+        <!-- </div>
             <div class="payment-cont">
                 <p>Secure Payment</p>
                 <img src="img/visa-mastercard.png" alt="payment">
-            </div>
+            </div> -->
         </div>
         <div class="footer-2" id="contact-us">
-            <h2>Contact Us</h2>
+            <h3>Contact Us</h3>
             <ul>
-                <a href="#"><i class="fa-solid fa-phone"></i> Tel +1 (98) 102-546-15-12</a>
-                <a href="#"><i class="fa-solid fa-envelope"></i> coursecore.support@gmail.com</a>
-                <a href="#"><i class="fa-brands fa-twitter"></i> @coursecore</a>
+                <a href="/">Contacts</a>
+                <a href="/">Collaborate</a>
+                <a href="/">Sponsors</a>
+                <!-- <a href="/"><i class="fa-solid fa-phone"></i> Tel +1 (98) 102-546-15-12</a> 
+                <a href="/"><i class="fa-brands fa-twitter"></i> @coursecore</a> -->
             </ul>
         </div>
         <div class="footer-3">
-            <h2>Useful Newsletter</h2>
-            <p>Let us notify you about new blog articles, new free courses and share useful
-                materials.</p>
-            <form class="footer-news-action">
-                <input type="text" placeholder="Your E-mail...">
-                <button type="submit">Send</button>
-            </form>
+            <h3>Social-media</h3>
+            <ul>
+                <a href="/">Instagram</a>
+                <a href="/">Twitter</a>
+                <a href="/">LinkedIn</a>
+            </ul>
         </div>
+        <div class="logo">
+            <img src="/" alt="logo">
+            <a href="index.html">
+                <h1>Tech Treks</h1>
+            </a>
+        </div>
+        <form class="footer-action">
+            <div>
+                <a class="form-mail-section" href="/"><i class="fa-solid fa-envelope"></i> TechTreks@gmail.com</a>
+            </div>
+            <input type="text" placeholder="Your E-mail...">
+            <button type="submit">Send</button>
+        </form>
+        </div>
+        <div class="footer-rights">Tech-Treks © .
+            All rights reserved.</div>
     </footer>
+
     <script src="js/script.js"></script>
 </body>
 
