--- a/index.html
+++ b/index.html
@@ -39,10 +39,6 @@
                 <li>
                     <a href="#contact-us">PROJECTS</a>
                 </li>
-                <!-- <li>
-                    <a href="privacypolicy.html">Privacy Policy</a>
-                </li> -->
-
             </ul>
             <ul>
                 <li class="buttons">
@@ -90,7 +86,7 @@
                         <p>Non-tech roles are the backbone of every industry's success story,They're the architects of
                             innovation, the strategists behind growth.....</p>
                         <div class="card-action">
-                            <a href="course.html" class="button">Read more</a>
+                            <a href="career.html" class="button">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -127,7 +123,7 @@
                 <img src="img/marketing.jpg" alt="">
                 <div class="card-content">
                     <div class="card-text">
-                        <h2>Marketing</h2>
+                        <h2>Opportunities</h2>
                         <p>Learn fundamentals like creating a marketing
                             strategy, leveraging digital and
                             <span class="card-span">
@@ -214,7 +210,7 @@
         <div class="logo">
             <img src="/" alt="logo">
             <a href="index.html">
-                <h1>Tech Trek</h1>
+                <h1>Tech Treks</h1>
             </a>
         </div>
         <form class="footer-action">
