--- a/articles.html
+++ b/articles.html
@@ -29,19 +29,16 @@
                     <a href="register.html">Log in</a>
                 </li>
                 <li>
-                    <a href="courses.html">Courses</a>
+                    <a href="about-us.html">ABOUT</a>
                 </li>
                 <li>
-                    <a href="articles.html">Articles</a>
+                    <a href="courses.html">LEARN</a>
                 </li>
                 <li>
-                    <a href="about-us.html">About us</a>
+                    <a href="articles.html">SERVICES</a>
                 </li>
                 <li>
-                    <a href="privacypolicy.html">Privacy Policy</a>
-                </li>
-                <li>
-                    <a href="#contact-us">Contact Us</a>
+                    <a href="#contact-us">PROJECTS</a>
                 </li>
             </ul>
             <ul>
@@ -114,35 +111,53 @@
     </div>
 
 
+
     <footer>
 
-        <div class="footer-1">
+        <!-- <div class="footer-1">
             <div class="footer-logo-cont">
                 <img src="img/logo.png" alt="logo">
-                <h1>CourseCore</h1>
-            </div>
+                <h1>CourseCore</h1> -->
+        <!-- </div>
             <div class="payment-cont">
                 <p>Secure Payment</p>
                 <img src="img/visa-mastercard.png" alt="payment">
-            </div>
+            </div> -->
         </div>
         <div class="footer-2" id="contact-us">
-            <h2>Contact Us</h2>
+            <h3>Contact Us</h3>
             <ul>
-                <a href="#"><i class="fa-solid fa-phone"></i> Tel +1 (98) 102-546-15-12</a>
-                <a href="#"><i class="fa-solid fa-envelope"></i> coursecore.support@gmail.com</a>
-                <a href="#"><i class="fa-brands fa-twitter"></i> @coursecore</a>
+                <a href="/">Contacts</a>
+                <a href="/">Collaborate</a>
+                <a href="/">Sponsors</a>
+                <!-- <a href="/"><i class="fa-solid fa-phone"></i> Tel +1 (98) 102-546-15-12</a> 
+                <a href="/"><i class="fa-brands fa-twitter"></i> @coursecore</a> -->
             </ul>
         </div>
         <div class="footer-3">
-            <h2>Useful Newsletter</h2>
-            <p>Let us notify you about new blog articles, new free courses and share useful
-                materials.</p>
-            <form class="footer-news-action">
-                <input type="text" placeholder="Your E-mail...">
-                <button type="submit">Send</button>
-            </form>
+            <h3>Social-media</h3>
+            <ul>
+                <a href="/">Instagram</a>
+                <a href="/">Twitter</a>
+                <a href="/">LinkedIn</a>
+            </ul>
         </div>
+        <div class="logo">
+            <img src="/" alt="logo">
+            <a href="index.html">
+                <h1>Tech Treks</h1>
+            </a>
+        </div>
+        <form class="footer-action">
+            <div>
+                <a class="form-mail-section" href="/"><i class="fa-solid fa-envelope"></i> TechTreks@gmail.com</a>
+            </div>
+            <input type="text" placeholder="Your E-mail...">
+            <button type="submit">Send</button>
+        </form>
+        </div>
+        <div class="footer-rights">Tech-Treks © .
+            All rights reserved.</div>
     </footer>
 
     <script src="js/script.js"></script>
