changed logo, created service page changed footer

--- a/about-us.html
+++ b/about-us.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style/adaptive.css">
     <link rel="stylesheet" href="style/courses.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="img/logo.png">
     <title>About us - Tech Treks</title>
 </head>
 
@@ -41,7 +41,7 @@
                     <a href="courses.html">LEARN</a>
                 </li>
                 <li>
-                    <a href="articles.html">SERVICES</a>
+                    <a href="services.html">SERVICES</a>
                 </li>
                 <li>
                     <a href="#contact-us">PROJECTS</a>
