--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style/adaptive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="img/logo.png">
 
 </head>
 
@@ -19,7 +19,7 @@
             <div class="logo">
                 <img src="img/logo.png" alt="logo">
                 <a href="index.html">
-                    <h1 class="tech">Tech Treks</h1>
+                    <h1 class="tech">TechTreks</h1>
                 </a>
             </div>
             <ul id="dropdown" class="nav-panel">
@@ -34,7 +34,7 @@
                     <a href="courses.html">LEARN</a>
                 </li>
                 <li>
-                    <a href="articles.html">SERVICES</a>
+                    <a href="services.html">SERVICES</a>
                 </li>
                 <li>
                     <a href="#contact-us">PROJECTS</a>
@@ -58,7 +58,7 @@
     <div class="main-container">
         <div class="main-text">
             <p class="main-p">Get ready to be on Track Through</p>
-            <h1>Tech Treks</h1>
+            <h1>Tech_Treks</h1>
             <script>
                 window.embeddedChatbotConfig = {
                     chatbotId: "LrK1OeXHmz4C0BgZYdHim",
@@ -124,12 +124,9 @@
                 <div class="card-content">
                     <div class="card-text">
                         <h2>Opportunities</h2>
-                        <p>Learn fundamentals like creating a marketing
-                            strategy, leveraging digital and
-                            <span class="card-span">
-                                social media channels to reach your business goals.</span>
-                        </p>
-
+                        <p>Opportunities abound in fields such as administrative roles, marketing, human
+                            resources,finance, and entrepreneurship,
+                            where individuals can drive innovation, foster growth</p>
                         <div class="card-action">
                             <a href="#" class="button">Read more</a>
                         </div>
@@ -140,7 +137,7 @@
     </div>
 
     <div class="search-container">
-        <h1>Search the course you're lookin' for</h1>
+        <h1>Explore the vast capabilities of </h1>
         <div class="search">
             <div class="search-text">
                 <p>With our advanced search you can quickly find the course you want</p>
