--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/register.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="img/logo.png">
     <title>Register</title>
 </head>
 
@@ -15,7 +15,7 @@
 
     <div class="container" id="container">
         <div class="form-container sign-up ">
-            
+
             <div class="back">
                 <a href="index.html" title="Back to main page"><i class="fa-solid fa-arrow-left-long"></i></a>
             </div>
@@ -52,7 +52,7 @@
                 <a href="index.html" title="Back to main page"><i class="fa-solid fa-arrow-left-long"></i></a>
             </div>
             <form action="">
-                <h1>Log in</h1>                
+                <h1>Log in</h1>
                 <div class="social-icons">
                     <a href="#">
                         <i class="fa-brands fa-google"></i>
