--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="icon" href="img/logo.png">
 
-    <title>CourseCore Articles</title>
+    <title>Tech-Treks Services</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <div class="logo">
                 <img src="img/logo.png" alt="logo">
                 <a href="index.html">
-                    <h1>CourseCore</h1>
+                    <h1>Tech Treks</h1>
                 </a>
             </div>
             <ul id="dropdown" class="nav-panel">
@@ -57,8 +57,7 @@
 
     <div class="main-articles">
         <div class="main-articles-text">
-            <h1>Read useful articles from the <span>CourseCore</span> team</h1>
-            <p>Our team regularly publishes topical articles that can keep you occupied between course sessions.</p>
+            <h1>Services provided by Tech-Treks to excel you'r Non-tech careers</h1>
         </div>
     </div>
 
@@ -66,46 +65,31 @@
 
         <div class="articles">
             <div class="article">
-                <h2>Frontend developer - what kind of profession is this?</h2>
+                <h1>Industry Tours</h1>
                 <p>Let's figure out who a Frontend developer is, what he does and how much he earns. We’ll also learn
                     how Frontend development differs from web development, what skills are needed to start a career, and
                     where those who want to become Frontend developers can get them.</p>
-                <div class="article-desc">
-                    <p class="topic">Programming</p>
-                    <p><i class="fa-regular fa-eye"></i> 150</p>
-                    <p>Reading time: 2 min.</p>
-                </div>
+                <!-- <div class="article-desc">
+                    <p class="topic">explore</p>
+                </div> -->
             </div>
             <div class="article">
-                <h2>What should a freelancer provide in a contract with a client?</h2>
-                <p>So, what points in the contract with the customer should a freelancer pay special attention to so as
-                    not to waste his own strength, time and nerves during the work process.</p>
-                <div class="article-desc">
-                    <p class="topic">Other</p>
-                    <p><i class="fa-regular fa-eye"></i> 150</p>
-                    <p>Reading time: 2 min.</p>
-                </div>
+                <h1>Skill Development Workshop</h1>
+                <p>workshops and training sessions focused on developing practical models, time management and
+                    problem-solving.
+                    These workshops can be tailored to the specific needs of different non-tech fields.</p>
             </div>
             <div class="article">
-                <h2>Inflation: why prices are rising and who can contain them</h2>
-                <p>If prices are constantly rising, it means there is inflation in the country. Let's figure out what is
-                    the reason for this state of affairs, whether inflation can be useful and how it is controlled.</p>
-                <div class="article-desc">
-                    <p class="topic">Economics</p>
-                    <p><i class="fa-regular fa-eye"></i> 150</p>
-                    <p>Reading time: 2 min.</p>
-                </div>
+                <h1>Professional Development Program</h1>
+                <p>professional development programs and certifications that are recognized and valued in the respective
+                    non-tech industries.
+                    These programs will help individuals enhance their skills, credentials, and employability..</p>
             </div>
             <div class="article">
-                <h2>UX/UI design trends for the first half of 2023</h2>
-                <p>What new products and fresh ideas in interface design should you take a closer look at and implement
-                    in your work? Get acquainted with the selection of the main UX/UI design trends based on the results
-                    of the first half of 2023!</p>
-                <div class="article-desc">
-                    <p class="topic">Design</p>
-                    <p><i class="fa-regular fa-eye"></i> 150</p>
-                    <p>Reading time: 2 min.</p>
-                </div>
+                <h1>Industry-Specific Challenges and Competitions</h1>
+                <p> Competitions, and hackathons focused on solving real-world problems in non-tech fields. This fosters
+                    creativity, teamwork, and
+                    innovation while providing practical experience in problem-solving and project management..</p>
             </div>
         </div>
     </div>
@@ -113,16 +97,6 @@
 
 
     <footer>
-
-        <!-- <div class="footer-1">
-            <div class="footer-logo-cont">
-                <img src="img/logo.png" alt="logo">
-                <h1>CourseCore</h1> -->
-        <!-- </div>
-            <div class="payment-cont">
-                <p>Secure Payment</p>
-                <img src="img/visa-mastercard.png" alt="payment">
-            </div> -->
         </div>
         <div class="footer-2" id="contact-us">
             <h3>Contact Us</h3>
@@ -130,8 +104,6 @@
                 <a href="/">Contacts</a>
                 <a href="/">Collaborate</a>
                 <a href="/">Sponsors</a>
-                <!-- <a href="/"><i class="fa-solid fa-phone"></i> Tel +1 (98) 102-546-15-12</a> 
-                <a href="/"><i class="fa-brands fa-twitter"></i> @coursecore</a> -->
             </ul>
         </div>
         <div class="footer-3">
@@ -156,7 +128,7 @@
             <button type="submit">Send</button>
         </form>
         </div>
-        <div class="footer-rights">Tech-Treks © .
+        <div class="footer-rights">Tech-Treks ©
             All rights reserved.</div>
     </footer>
 
