--- a/career.html
+++ b/career.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="img/logo.png">
 
     <title>Mechanical</title>
 </head>
@@ -37,7 +37,7 @@
                     <a href="courses.html">LEARN</a>
                 </li>
                 <li>
-                    <a href="articles.html">SERVICES</a>
+                    <a href="services.html">SERVICES</a>
                 </li>
                 <li>
                     <a href="#contact-us">PROJECTS</a>
