--- a/courses.html
+++ b/courses.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/courses.css">
     <link rel="stylesheet" href="style/adaptive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="img/logo.png">
 
     <title></title>
 </head>
@@ -35,7 +35,7 @@
                     <a href="courses.html">LEARN</a>
                 </li>
                 <li>
-                    <a href="about-us.html">SERVICES</a>
+                    <a href="services.html">SERVICES</a>
                 </li>
                 <li>
                     <a href="privacypolicy.html">PROJECTS</a>
