--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/privacyPolicy.css">
     <link rel="stylesheet" href="style/adaptive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="img/logo.png">
 
     <title>Privacy Policy - CourseCore</title>
 </head>
@@ -85,15 +85,18 @@
                     </div>
                     <div class="service">
                         <h4><i class="fa-solid fa-chart-simple"></i> Marketing and Analytics:</h4>
-                        <p>Conducting marketing research based on user data and analyzing user behavior to improve the quality of services.</p>
+                        <p>Conducting marketing research based on user data and analyzing user behavior to improve the
+                            quality of services.</p>
                     </div>
                     <div class="service">
                         <h4><i class="fa-brands fa-cc-paypal"></i> Payments and Financial Transactions:</h4>
-                        <p>Processing payments for premium courses and managing financial operations and subscriptions.</p>
+                        <p>Processing payments for premium courses and managing financial operations and subscriptions.
+                        </p>
                     </div>
                     <div class="service">
                         <h4><i class="fa-solid fa-shield-halved"></i> Legal and Security Considerations:</h4>
-                        <p>Compliance with data protection laws (e.g., GDPR, CCPA) and ensuring the security and confidentiality of user data.</p>
+                        <p>Compliance with data protection laws (e.g., GDPR, CCPA) and ensuring the security and
+                            confidentiality of user data.</p>
                     </div>
 
                 </div>
